--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport"
      content="width=device-width, initial-scale=1, user-scalable=yes">
-<script
+  <script
   src="https://code.jquery.com/jquery-2.2.4.min.js"
   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
   crossorigin="anonymous"></script>
@@ -13,18 +13,70 @@
 </head>
 <body>
  
-<div class="container-fluid">
-  <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-10"></div>
-      <div class="col-md-1"></div>
-  </div>
+  <div class="container-fluid">
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <h1>Campus Community Connections</h1>
+          <h2> Explore projects in your community, or request to submit a new one! </h2>
+          <button type="submit" class="btn btn-default">Propose Project</button>
+        </div>
+        <div class="col-md-2"></div>
+    </div>
  
-  <div class="row">
+    <div class="row">
       <div class="col-md-2"></div>
-      <div class="col-md-7">
-        <h1>Main Title</h1>
-        <h2>Sub title</h2>
+      <div class="col-md-8">
+        <form>
+          <div class="form-group">
+            <label for="searchBar">Search by keyword</label>
+            <input type="search" class="form-control" id="searchBar" placeholder="Search">
+          </div>
+          <div class="checkbox">
+            <p class="help-block">Filter by category</p>
+            <label>
+              <input type="checkbox">Waste Management
+            </label>
+            <label>
+              <input type="checkbox">Water Management
+            </label>
+            <label>
+              <input type="checkbox">Carbon Footprint
+            </label>
+            <label>
+              <input type="checkbox">Miscellaneous
+            </label>
+          </div>
+          <div class="checkbox">
+            <p class="help-block">Filter by community</p>
+            <label>
+              <input type="checkbox">College Park
+            </label>
+            <label>
+              <input type="checkbox">Hyattsville
+            </label>
+            <label>
+              <input type="checkbox">Riverdale Park
+            </label>
+            <label>
+              <input type="checkbox">University Park
+            </label>
+            <label>
+              <input type="checkbox">Berwyn Heights
+            </label>
+            <label>
+              <input type="checkbox">Prince Georges County
+            </label>
+          </div>
+          <button type="submit" class="btn btn-default">Search</button>
+        </form>
+      </div>
+      <div class="col-md-2"></div>
+  </div>
+  <div class="row">
+    <div class="col-md-3"></div>
+      <div class="col-md-6">
+        <h1 class="text-center">Project List</h1>
       </div>
       <div class="col-md-3"></div>
   </div>
