--- a/index.html
+++ b/index.html
@@ -81,13 +81,23 @@
       <div class="col-md-3"></div>
   </div>
 </div>
-  <pre id="object"></pre>
 </body>
 
-<script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
-<script src="https://www.gstatic.com/firebasejs/4.13.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/4.13.0/firebase-database.js"></script>
-<script type = "text/javascript" src = "app.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
+<script type='text/javascript'>
+  var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/12TaWxdp5gRuULZsBL2eGdM01NpohOHqyKRv9-HGL2ZU/edit?usp=sharing';
 
+  function init() {
+    Tabletop.init( { key: 'https://docs.google.com/spreadsheets/d/12TaWxdp5gRuULZsBL2eGdM01NpohOHqyKRv9-HGL2ZU/edit?usp=sharing',
+                     callback: showInfo,
+                     simpleSheet: true } )
+  }
 
+  function showInfo(data, tabletop) {
+    alert('Successfully processed!')
+    console.log(data);
+  }
+
+  window.addEventListener('DOMContentLoaded', init)
+</script>
 </html>
