--- a/index.html
+++ b/index.html
@@ -30,45 +30,8 @@
         <form>
           <div class="form-group">
             <label for="searchBar">Search by keyword</label>
-            <input type="search" class="form-control" id="searchBar" placeholder="Search">
+            <input id="myInput" type="text" onkeyup="filterTable()" placeholder="Search">
           </div>
-          <div class="checkbox">
-            <p class="help-block">Filter by category</p>
-            <label>
-              <input type="checkbox">Waste Management
-            </label>
-            <label>
-              <input type="checkbox">Water Management
-            </label>
-            <label>
-              <input type="checkbox">Carbon Footprint
-            </label>
-            <label>
-              <input type="checkbox">Miscellaneous
-            </label>
-          </div>
-          <div class="checkbox">
-            <p class="help-block">Filter by community</p>
-            <label>
-              <input type="checkbox">College Park
-            </label>
-            <label>
-              <input type="checkbox">Hyattsville
-            </label>
-            <label>
-              <input type="checkbox">Riverdale Park
-            </label>
-            <label>
-              <input type="checkbox">University Park
-            </label>
-            <label>
-              <input type="checkbox">Berwyn Heights
-            </label>
-            <label>
-              <input type="checkbox">Prince Georges County
-            </label>
-          </div>
-          <button type="submit" class="btn btn-default">Search</button>
         </form>
       </div>
       <div class="col-md-2"></div>
@@ -114,7 +77,7 @@ for (i in data[0]) {
 }
 tableHead+='</tr>';
 for (var k =0; k< data.length; k++){
-    tableBody+='<tr <!--onclick expand--> >';
+    tableBody+='<tr>';
     for (var l in data[k]){
         if (data[k].hasOwnProperty(l)) {
             tableBody+='<td>'+data[k][l]+'</td>';
@@ -127,5 +90,22 @@ document.getElementById("tableB").innerHTML = tableBody;
   }
 
   window.addEventListener('DOMContentLoaded', init)
+
+function filterTable(event) {
+    var input = document.getElementById("myInput");
+    var filter = input.value.toUpperCase();
+    var trable = document.getElementById("tableB");
+    var tr = trable.getElementsByTagName("tr");
+    for (var i = 0; i < tr.length; i++) {
+      console.log(tr.textContent);
+        if (tr.textContent.toUpperCase().indexOf(filter) > -1) {
+            tr[i].style.display = "";
+        } else {
+            tr[i].style.display = "none";
+        }      
+    }
+}
+
+document.querySelector('#myInput').addEventListener('keyup', filterTable, false);
 </script>
 </html>
