--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="head-s">
     <div class="row">
       <div class="col-md-1">
-        <img src="logoweb.png" alt="logo">
+        <img src="logoweb.png" id="logo" alt="logo">
       </div>
       <div class="col-md-9"></div>
       <div class="col-md-2">
