--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             else
                 $target.closest("tr").find("td:first").html("+"); 
     }
+    function show_hide_row1(row) {
+      var $target = $(event.target);
+      $("#"+row).slideToggle(1000);
+    }
   </script>
 </head>
 <body>
@@ -122,7 +126,7 @@
       tableBody+='<tr onclick="show_hide_row(\'description'+ll+'\');" class="nameRow '+data[k]['municipality'].substring(0,3)+'">';
       tableBody+='<td class=\"plus\">+</td><td class="nameCell">'+data[k]['name']+'</td>';
 
-      tableBody+='</tr><tr id=\"description' + ll + '\" class=\"description\"><td class=\"desCell\" colspan="3"><p>' +data[k]['description']+ '</p><div class=\"row tags\"><div class=\"col-sm-2\"><span class=\"loc\">'+data[k]['municipality']+'</span></div><div class=\"col-sm-8\"></div><div class=\"col-sm-2\"><a class="btn" href=\'https://goo.gl/forms/CGionRn90ootRY4I2\' target="_blank">Get Involved</a></div></div></td></tr>';
+      tableBody+='</tr><tr onclick="show_hide_row1(\'description'+ll+'\');" id=\"description' + ll + '\" class=\"description\"><td class=\"desCell\" colspan="3"><p>' +data[k]['description']+ '</p><div class=\"row tags\"><div class=\"col-sm-2\"><span class=\"loc\">'+data[k]['municipality']+'</span></div><div class=\"col-sm-8\"></div><div class=\"col-sm-2\"><a class="btn" href=\'https://goo.gl/forms/CGionRn90ootRY4I2\' target="_blank">Get Involved</a></div></div></td></tr>';
       ll++;
       }
 
